[package]
name = "unit3d-announce"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = true, features = ["std"] }
arc-swap = "1.8.0"
axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio", "query", "macros", "json"] }
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
dotenvy = { version = "0.15.7", default-features = false }
futures-util = "0.3.31"
indexmap = { version = "2.13.0", default-features = false, features = ["std", "serde"] }
memchr = { version = "2.7.6", default-features = false, features = ["std"] }
parking_lot = "0.12.5"
rand = { version = "0.9.2", default-features = false, features = ["alloc", "thread_rng"] }
ringmap = "0.1.5"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_bytes = "0.11.19"
serde_repr = { version = "0.1.20", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "chrono", "ipnetwork"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
lto = true
codegen-units = 1
