[package]
name = "unit3d-announce"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.8.0"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
indexmap = { version = "2.13.0", features = ["serde"] }
memchr = "2.7.6"
parking_lot = "0.12.5"
rand = { version = "0.9.2", features = ["thread_rng"] }
ringmap = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_repr = "0.1.20"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "mysql", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
lto = true
codegen-units = 1
